--- a/device_diabetes.html
+++ b/device_diabetes.html
@@ -1731,7 +1731,7 @@
         try {
             userStatus.textContent = '正在檢查使用者設定...';
             
-            const response = await fetch('https://3fc61ff0deff.ngrok-free.app/ask_user_name_and_id', {
+            const response = await fetch(' https://7c7f92810877.ngrok-free.app', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -2111,7 +2111,7 @@
         try {
             document.getElementById('user-info-status').textContent = '正在查詢用戶資料...';
             
-            const response = await fetch('https://3fc61ff0deff.ngrok-free.app/ask_user_name_and_id', {
+            const response = await fetch(' https://7c7f92810877.ngrok-free.app', {
             method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
