--- a/device_diabetes.html
+++ b/device_diabetes.html
@@ -1235,6 +1235,8 @@
                             <button type="button" class="exDurBtn" data-min="30" style="padding:6px 10px; border:1px solid #ced4da; background:#fff; border-radius:20px; cursor:pointer;">30</button>
                             <button type="button" class="exDurBtn" data-min="45" style="padding:6px 10px; border:1px solid #ced4da; background:#fff; border-radius:20px; cursor:pointer;">45</button>
                             <button type="button" class="exDurBtn" data-min="60" style="padding:6px 10px; border:1px solid #ced4da; background:#fff; border-radius:20px; cursor:pointer;">60</button>
+                            <button type="button" class="exDurBtn" data-min="90" style="padding:6px 10px; border:1px solid #ced4da; background:#fff; border-radius:20px; cursor:pointer;">90</button>
+                            <button type="button" class="exDurBtn" data-min="120" style="padding:6px 10px; border:1px solid #ced4da; background:#fff; border-radius:20px; cursor:pointer;">120</button>
                         </div>
                         <input type="number" id="exDuration" name="exDuration" min="5" max="240" step="5" value="30" required style="width:100%; padding:8px; border:1px solid #ccc; border-radius:4px;" />
                     </div>
@@ -3729,12 +3731,12 @@
 
         // 運動種類與MET值對應表
         window.exerciseMETs = {
-            '步行': { '低強度': 3.5, '中強度': 5.5, '高強度': 7.0 },
-            '慢跑': { '低強度': 8.2, '中強度': 10.0, '高強度': 12.7 },
-            '騎自行車': { '低強度': 4.0, '中強度': 8.4, '高強度': 12.6 },
-            '游泳': { '低強度': 6.3, '中強度': 8.0, '高強度': 10.0 },
-            '重量訓練': { '低強度': 3.0, '中強度': 5.0, '高強度': 8.0 },
-            '瑜珈/伸展': { '低強度': 3.0, '中強度': 4.2, '高強度': 5.0 }
+            '步行': { '低強度': 3.0, '中強度': 4.3, '高強度': 5.3 },
+            '慢跑': { '低強度': 8.8, '中強度': 10.0, '高強度': 11.2 },
+            '騎自行車': { '低強度': 6.0, '中強度': 10.0, '高強度': 14.0 },
+            '游泳': { '低強度': 6.0, '中強度': 8.0, '高強度': 10.0 },
+            '重量訓練': { '低強度': 3.5, '中強度': 5.0, '高強度': 6.2 },
+            '瑜珈/伸展': { '低強度': 3.3, '中強度': 5.0, '高強度': 6.0 }
         };
 
         // 圖表切換按鈕
