--- a/device_diabetes.html
+++ b/device_diabetes.html
@@ -1216,6 +1216,8 @@
                             <option value="游泳">游泳</option>
                             <option value="重量訓練">重量訓練</option>
                             <option value="瑜珈/伸展">瑜珈/伸展</option>
+                            <option value="乒乓球">乒乓球</option>
+                            <option value="籃球">籃球</option>
                         </select>
                     </div>
                     <div>
@@ -3736,7 +3738,9 @@
             '騎自行車': { '低強度': 6.0, '中強度': 10.0, '高強度': 14.0 },
             '游泳': { '低強度': 6.0, '中強度': 8.0, '高強度': 10.0 },
             '重量訓練': { '低強度': 3.5, '中強度': 5.0, '高強度': 6.2 },
-            '瑜珈/伸展': { '低強度': 3.3, '中強度': 5.0, '高強度': 6.0 }
+            '瑜珈/伸展': { '低強度': 3.3, '中強度': 5.0, '高強度': 6.0 },
+            '乒乓球' : { '低強度': 3.0, '中強度': 4.0, '高強度': 6.0 },
+            '籃球' : { '低強度': 4.5, '中強度': 8.0, '高強度': 10.0 },
         };
 
         // 圖表切換按鈕
