--- a/device_diabetes.html
+++ b/device_diabetes.html
@@ -1360,6 +1360,14 @@
                                 <input type="checkbox" value="瑜珈/伸展" style="margin-right:6px;" />
                                 瑜珈/伸展
                             </label>
+                            <label style="display:flex; align-items:center; font-size:12px; cursor:pointer;">
+                                <input type="checkbox" value="乒乓球" style="margin-right:6px;" />
+                                乒乓球
+                            </label>
+                            <label style="display:flex; align-items:center; font-size:12px; cursor:pointer;">
+                                <input type="checkbox" value="籃球" style="margin-right:6px;" />
+                                籃球
+                            </label>
                         </div>
                     </div>
                     <button id="saveExerciseGoals" style="background-color:#007bff; color:white; padding:8px 16px; border:none; border-radius:4px; cursor:pointer; font-size:14px;">儲存目標</button>
